# YieldVault-Contracts

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: coverage.yml
docs/: api-quickstart.md  architecture.md  audit-preparation.md  authorization.md  backend-integration.md  changelog-policy.md  cli-usage.md  code-style.md  contributing-guide.md  data-types.md  deployment-guide.md  edge-cases.md  entrypoint-reference.md  error-handling.md  error-reference.md  event-indexing.md  event-reference.md  examples-advanced.md  examples-basic.md  faq.md  frontend-integration.md  gas-and-fees.md  glossary.md  governance.md  initialization.md  integration-tests.md  invariants.md  known-limitations.md  mainnet-checklist.md  migration-guide.md  observability.md  overview.md  performance-notes.md  property-tests.md  release-process.md  replay-protection.md  resource-limits.md  roadmap.md  sdk-integration.md  security-considerations.md  (+10 more)
docs/adr/: 0001-use-soroban-sdk-21-x.md  0002-compile-as-a-cdylib-for-wasm32.md  0003-adopt-no-std-for-the-contract-crate.md  0004-separate-instance-and-persistent-storage.md  0005-define-a-ttl-bump-strategy-for-persistent-entries.md  0006-model-errors-with-a-contracterror-enum.md  0007-establish-an-event-naming-convention.md  0008-require-auth-on-all-state-changing-entrypoints.md  0009-use-checked-arithmetic-for-all-math.md  0010-represent-token-amounts-as-i128.md  (+31 more)
scripts/: verify_wasm_hash.sh
src/: error.rs  events.rs  lib.rs  math.rs  storage.rs  test.rs  types.rs
tests/: test_verify_wasm_hash.sh
(+34 files in other folders)
