[package]
name = "yieldvault-contract"
version = "0.2.0"
edition = "2021"
authors = ["YieldVault Contributors"]
description = "A share-based (ERC4626-style) DeFi yield vault smart contract for Soroban"
license = "MIT"
repository = ""
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21"

[dev-dependencies]
soroban-sdk = { version = "21", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
